--- a/index.html
+++ b/index.html
@@ -2,6 +2,31 @@
 
 <html lang="en">
     <head>
+
+        <style>
+            body {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                margin: 0;
+                padding: 20px;
+            }
+
+            h1 {
+                text-align:center;
+                margin-bottom: 20px;
+            }
+
+            #geo_map {
+                width: 100%;
+                max-width: 1000px;
+            }
+
+
+        </style>
+
+
+
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,7 +42,6 @@
     </head>
 
     <body>
-        <h1>Homework Week 9 Vega-lite Geographical Map</h1>
         <div id="geo_map">
 
         </div>
